fixed text alignment

--- a/static/css/auth/register/styles.css
+++ b/static/css/auth/register/styles.css
@@ -100,6 +100,7 @@ p, .step p {
     border: 1px solid #9e9e9e;
     border-radius: 5px;
     width: 100%;
+    text-align: left;
     transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -254,6 +255,18 @@ p, .step p {
 
 .form-check {
     align-items: center;
+}
+
+.form-check-label {
+    text-align: left;
+    margin-left: 0.5rem;
+    color: black !important;
+}
+
+.form-check label a {
+    color: black !important;
+    font-weight: bold;
+    font-size: 0.9rem;
 }
 
 #step3.active {
